# flappy-bird

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.c
